# DevContainerEmbeddedTestApp

./: .gitignore  CMakeLists.txt  EmbeddedApplication.code-workspace  README.md
.devcontainer/: Dockerfile  devcontainer.json
Core/Src/: main.c
Debug/: makefile
